--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Walle devops</title>
+  <title>Bootstrap Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -12,25 +12,46 @@
 
 <div class="jumbotron text-center">
   <h1>Walle DevOps</h1>
-  <p>Te comparto los conocimientos que se !!!</p> 
+  <p>De a poco, subire los links del conocimiento que tengo. </p> 
 </div>
   
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
-      <h3>Github</h3>
-      <p>Primeros pasos en GitHub...</p>
+      <h3>GitHub</h3>
+      <img src="imagenes/github_logo.png" class="img-circle" alt="GitHub" width="304" height="236">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
     <div class="col-sm-4">
-      <h3>Docker</h3>
-      <p>Primeros pasos en Docker...</p>
+      <h3>Jenkins</h3>
+      <img src="imagenes/jenkins_logo.png" class="img-circle" alt="Jenkins" width="304" height="236">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
     <div class="col-sm-4">
-      <h3>Kubernetes</h3>        
-      <p>K8S para todos...</p>
+      <h3>Linux Bash</h3>
+      <img src="imagenes/linux_logo.png" class="img-circle" alt="linux" width="304" height="236">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    </div>
+    <div class="col-sm-4">
+        <h3>Docker</h3>        
+        <img src="imagenes/docker-thumbnail.png" class="img-circle" alt="docker" width="304" height="236">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    </div>
+    <div class="col-sm-4">
+        <h3>Kubernetes</h3>
+        <img src="imagenes/Kubernetes_logo_without_workmark.svg.png" class="img-circle" alt="k8s" width="304" height="236">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    </div>
+    <div class="col-sm-4">
+        <h3>AWS</h3>        
+        <img src="imagenes/1280px-Amazon_Web_Services_Logo.svg.png" class="img-circle" alt="k8s" width="304" height="236">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
   </div>
 </div>
