--- a/index.html
+++ b/index.html
@@ -12,44 +12,44 @@
 
 <div class="jumbotron text-center">
   <h1>Walle DevOps</h1>
-  <p>De a poco, subire los links del conocimiento que tengo. </p> 
+  <p>De a poco, ire subiendo el conocimiento que tengo... Espero les sea util, era esto o hacerme un onlyfans. </p> 
 </div>
   
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
       <h3>GitHub</h3>
-      <img src="imagenes/github_logo.png" class="img-circle" alt="GitHub" width="304" height="236">
+      <img src="imagenes/github_logo.png" class="img-circle" alt="GitHub" width="100" height="auto" margin-bottom="16px" margin-bottom="16px">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
     <div class="col-sm-4">
       <h3>Jenkins</h3>
-      <img src="imagenes/jenkins_logo.png" class="img-circle" alt="Jenkins" width="304" height="236">
+      <img src="imagenes/jenkins_logo.png" class="img-circle" alt="Jenkins" width="100" height="auto" margin-bottom="16px">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
     <div class="col-sm-4">
       <h3>Linux Bash</h3>
-      <img src="imagenes/linux_logo.png" class="img-circle" alt="linux" width="304" height="236">
+      <img src="imagenes/linux_logo.png" class="img-circle" alt="linux" width="100" height="auto" margin-bottom="16px">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
     <div class="col-sm-4">
         <h3>Docker</h3>        
-        <img src="imagenes/docker-thumbnail.png" class="img-circle" alt="docker" width="304" height="236">
+        <img src="imagenes/docker-thumbnail.png" class="img-circle" alt="docker" width="100" height="auto" margin-bottom="16px">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
     <div class="col-sm-4">
         <h3>Kubernetes</h3>
-        <img src="imagenes/Kubernetes_logo_without_workmark.svg.png" class="img-circle" alt="k8s" width="304" height="236">
+        <img src="imagenes/Kubernetes_logo_without_workmark.svg" class="img-circle" alt="k8s" width="100" height="auto" margin-bottom="16px">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
     <div class="col-sm-4">
         <h3>AWS</h3>        
-        <img src="imagenes/1280px-Amazon_Web_Services_Logo.svg.png" class="img-circle" alt="k8s" width="304" height="236">
+        <img src="imagenes/1280px-Amazon_Web_Services_Logo.svg.png" class="img-circle" alt="k8s" width="100" height="auto" margin-bottom="16px">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
