--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="jumbotron text-center">
-  <h1>Walle DevOps</h1>
+  <h1>wallei DevOps</h1>
   <p>De a poco, ire subiendo el conocimiento que tengo... Espero les sea util, era esto o hacerme un onlyfans. </p> 
 </div>
   
